buttons for projects

--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@
                         <div class="text">EEG Classification using Deep Learning</div>
                         <h4>Jun 2020 – Jul 2020</h4>
                         <p>
-                            A research project for EEG signal classification using deep learning. As part of this
-                            project ,various public available brain signal dataset where classified into different class
-                            based on emotion using both LSTM and CNN nueral network.</p>
-                        <a href="https://github.com/ashishshaji/EEG_Classification_Deeplearning">see code</a>
+                            A research project for EEG signal classification using deep learning using both LSTM and CNN nueral network.</p>
+                        <a href="https://github.com/ashishshaji/EEG_Classification_Deeplearning"><button class="button">See code</button> </a>
                     </div>
                 </div>
                 <div class="card">
@@ -95,7 +93,7 @@
                         <div class="text">Website for Engineers Forum</div>
                         <p>Offical website of Engineers Forum Palai where Frontend is build upon html/css and backend by
                             using php</p>
-                        <a href="http://engineersforumpala.in/">visit</a>
+                        <a class="column right" href="http://engineersforumpala.in/"><button class="button" >visit</button></a>
                     </div>
                 </div>
                 <div class="card">
